fdo#75162 - IA2: map new document roles to ROLE_SYSTEM_DOCUMENT.

Change-Id: I631d6e15162e58cf380b55ab1178a811b0304c33